Fixing Footer on Small screens

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -417,6 +417,9 @@ footer {
   }
   .foo {
     font-size: 0.9rem;
+    position: fixed;
+    bottom: 0;
+    right: 0;
   }
 }
 @media (max-width: 668px) {
